--- a/src/main/webapp/view/index.html
+++ b/src/main/webapp/view/index.html
@@ -41,11 +41,11 @@
               </div>
               <div class="form-group col-md-6">
                   <label for="year">Год выпуска:</label>
-                  <input type="text" class="form-control" id="year" name="year">
+                  <input type="number" class="form-control" id="year" name="year" min="1901">
               </div>
               <div class="form-group col-md-6">
                   <label for="mileage">Пробег (км):</label>
-                  <input type="text" class="form-control" id="mileage" name="mileage">
+                  <input type="number" class="form-control" id="mileage" name="mileage" min="0">
               </div>
               <div class="form-group col-md-6">
                   <label for="color">Цвет:</label>
@@ -53,7 +53,7 @@
               </div>
               <div class="form-group col-md-6">
                   <label for="price">Цена ($):</label>
-                  <input type="text" class="form-control" id="price" name="price">
+                  <input type="number" class="form-control" id="price" name="price" min="0">
               </div>
           </div>
           <button type="submit" class="btn btn-primary" id="add">Добавить</button>
