--- a/src/main/webapp/view/index.html
+++ b/src/main/webapp/view/index.html
@@ -33,27 +33,27 @@
           <div class="form-row">
               <div class="form-group col-md-6">
                   <label for="brand">Марка:</label>
-                  <input type="text" class="form-control" id="brand" name="brand">
+                  <input type="text" class="form-control" id="brand" name="brand" required>
               </div>
               <div class="form-group col-md-6">
                   <label for="model">Модель:</label>
-                  <input type="text" class="form-control" id="model" name="model">
+                  <input type="text" class="form-control" id="model" name="model" required>
               </div>
               <div class="form-group col-md-6">
                   <label for="year">Год выпуска:</label>
-                  <input type="number" class="form-control" id="year" name="year" min="1901">
+                  <input type="number" class="form-control" id="year" name="year" min="1901" required>
               </div>
               <div class="form-group col-md-6">
                   <label for="mileage">Пробег (км):</label>
-                  <input type="number" class="form-control" id="mileage" name="mileage" min="0">
+                  <input type="number" class="form-control" id="mileage" name="mileage" min="0" required>
               </div>
               <div class="form-group col-md-6">
                   <label for="color">Цвет:</label>
-                  <input type="text" class="form-control" id="color" name="color">
+                  <input type="text" class="form-control" id="color" name="color" required>
               </div>
               <div class="form-group col-md-6">
                   <label for="price">Цена ($):</label>
-                  <input type="number" class="form-control" id="price" name="price" min="1">
+                  <input type="number" class="form-control" id="price" name="price" min="1" required>
               </div>
           </div>
           <button type="submit" class="btn btn-primary" id="add">Добавить</button>
